--- a/1-1-12.html
+++ b/1-1-12.html
@@ -15,43 +15,27 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-
-  <link rel="stylesheet" href="1-style.css">
 </head>
 
 <body>
-  <input type="button" value="night" onclick="
-    document.querySelector('body').style.backgroundColor='black';
-    document.querySelector('body').style.color='white';
-  ">
-  <input type="button" value="day" onclick="
-    document.querySelector('body').style.backgroundColor='white';
-    document.querySelector('body').style.color='black';
-  ">
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <div id="grid">
-    <ol>
-      <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
-      <a href="2.html"><li>Awards</li></a>
-      <a href="3.html"><li>Contact</li></a>
-    </ol>
 
-    <div id="content">
-      <h2>Career</h2>
-      <u>since 2009.01.09</u>
-      <ul>
-        <a href="1-1.html"><li>Musical</li></a>
-        <a href="1-2.html"><li>Play</li></a>
-        <a href="1-3.html"><li>Opera</li></a>
-        <a href="1-4.html"><li>TV</li></a>
-        <a href="1-5.html"><li>Concert</li></a>
-        <a href="1-6.html"><li>Radio</li></a>
-        <a href="1-7.html"><li>Youtube</li></a>
+  <h2 style="margin-top:45px;">ZEV Career - Musical #12
+  <br>에드거 앨런 포 EDGAR ALLAN POE 2016 에드거 앨런 포 役</h2>
+  <br><img src="Zev_1-12-1.jpeg" width="300">
+  <img src="Zev_1-12-2.jpeg" width="300">
+  <img src="Zev_1-12-3.jpeg" width="300">
+  <br>[기간] 2016.05.26. ~ 2016.07.24.
+  <br>[장소] 광림아트센터 BBCH홀
+  <p>
+    <h3> Official Trailer </h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bv4K42H_0JM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
 
-      </ul>
-    </div>
-  </div>
-
+  <p>
+    <h3> Profile </h3>
+    <img src="Zev_1-12-4.png" width="300">
+  </p>
 
   <p>
     <div id="disqus_thread"></div>
@@ -90,6 +74,7 @@
     </script>
     <!--End of Tawk.to Script-->
   </p>
+
 
 </body>
 </html>
